--- a/Project/index.html
+++ b/Project/index.html
@@ -30,6 +30,8 @@
 								
 <i class="fa-brands fa-facebook"></i>
 <i class="fa-brands fa-linkedin"></i>
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-x-twitter"></i>
                                 
 							</ul>
 						</div>
@@ -225,24 +227,42 @@
 
 <div class="booking mt-auto d-flex align-items-center pb-3 pt-3 ">
 
-	<form action="" class="d-flex row justify-content-between align-items-center container myform ">
-<div class="sec1 col-12  d-flex flex-column gap-2 mb-2 ">
-	<label for="">Enter Pickup Location</label>
-	<input type="search" class="myinput w-100" placeholder="Enter pickup location">
+	<div class="container">
+
+
+<form action="" class=" row myform ">
+<div class="sec1 col-12 col-md-6 col-lg-3 main">
+	<div class="label">
+    <label for="">Enter Pickup Location</label>
+  </div>
+	<div class="myinput ps-0 ">
+    <input type="search" class="myinput w-100" placeholder="Enter pickup location">
+  </div>
+</div>
+
+<div class="sec1 col-12 col-md-6 col-lg-3 main">
+	<div class="label">
+    <label for="">Enter Pickup Location</label>
+  </div>
+	<div class="myinput ps-0 ">
+    <input type="search" class="myinput w-100" placeholder="Enter pickup location">
+  </div>
 </div>
 
 
-<div class="sec2 col-12 d-flex flex-column gap-2 mb-2 ">
-	<label for="">Enter Drop-off Location</label>
-	<input type="search" class="myinput w-100" placeholder="Enter Drop-off location">
+<div class="sec1 col-12 col-md-6 col-lg-3 main">
+	<div class="label">
+    <label for="">Enter Pickup Location</label>
+  </div>
+	<div class="myinput ps-0 ">
+    <input type="search" class="myinput w-100" placeholder="Enter pickup location">
+  </div>
 </div>
 
-<div class="sec3  col-12 d-flex flex-column w-100  gap-2 mb-2">
-	<label for="">Date & Time</label>
-	<input type="search" class="myinput w-100" placeholder="Select date and time">
-</div>
 
-<div class="sec4 col-12  mt-auto">
+
+
+<div class="sec4 col-12 col-md-6 col-lg-3 mt-auto mb-auto">
 	<button class="Mybtn" >
 		Book Now
 	</button>
@@ -252,6 +272,9 @@
 	</form>
 
 
+  </div>
+
+
 
 
 </div>
@@ -259,8 +282,10 @@
 
 <!-- services section -->
 
-<div class="services pt-5 pb-5 container">
+<div class="services   ">
 
+<div class="container mycontainer">
+  
 <h2 class="serviceHead1">OUR  <span class="serviceHead2"> SERVICES</span> </h2>
 
 <div id="cardCarousel2" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
@@ -270,7 +295,7 @@
      <div class="carousel-item active">
       <div class="row">
 
-        <div class="col-md-4">
+        <div class="col-md-4 mb-3">
           <div class="card">
             <img src="./assets/2025_mercedes-benz_s-class_sedan_amg-s-63-e-performance_fq_oem_1_1280.avif" class="card-img-top">
             <div class="card-body">
@@ -280,7 +305,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 mb-3">
           <div class="card">
             <img src="./assets/96fc9342246951ad0f8814476c5fe6fc.png" class="card-img-top">
             <div class="card-body">
@@ -290,7 +315,7 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 mb-3">
           <div class="card">
             <img src="./assets/d662614-1024x640.jpg" class="card-img-top">
             <div class="card-body">
@@ -354,7 +379,7 @@
 
 </div>
 
-
+</div>
 
 
 </div> 
@@ -362,8 +387,8 @@
 
 <!-- What sets us apart -->
 
-<div class="setUp pt-4 pb-4">
-<div class="container">
+<div class="setUp">
+<div class="container mycontainer">
 
   <h2 class="apartHead1 mb-5" >WHAT SETS US <SPAN class="apartHead2 mb-5"> APART </SPAN></h2>
 
@@ -579,6 +604,80 @@ US
 			</div>
 		</div>
 	</div> 
+
+
+
+  <!-- footer  -->
+
+<footer class="footer">
+<div class="container">
+
+<div class="row">
+
+<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
+  <div class="footHead"> 
+  <h5>About Us</h5>  
+  </div>
+  <div class="footContent">
+    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+  </div>
+  <div class="footIcons">
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-x-twitter"></i>
+<i class="fa-brands fa-facebook"></i>
+<i class="fa-brands fa-linkedin"></i>
+  </div>
+</div>
+<div class="footSec2 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+  <div class="footHead">
+    <h5>Pages</h5>
+  </div>
+  <div class="footContent">
+    <ul  class="ps-0">
+      <li>Blog</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+</div>
+<div class="footsec3 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+  <div class="footHead">
+    <h5>Resources</h5>
+  </div>
+  <div class="footContent">
+    <ul class="ps-0">
+      <li>Blog</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+</div>
+<div class="footSec4 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
+  <div class="footHead">
+    <h5>Contact</h5>
+  </div>
+  <div class="footContent">
+    <ul class="ps-0">
+      <li>@example.com</li>
+      <li>+023243234</li>
+      <li>location</li>
+    </ul>
+  </div>
+</div>
+</div>
+
+
+
+
+</div>
+
+</footer>
+
+<div class="footer2 d-flex justify-content-center">
+<p class="m-0 pt-5 pb-5">Copyright 2025</p>
+
+</div>
+
 
 
     <script src="./bootstrap-5.3.6-dist/js/bootstrap.min.js" ></script>
