--- a/Project/about.html
+++ b/Project/about.html
@@ -130,38 +130,38 @@ ABOUT US
 </div>
 
 <div class="cardcontent2">
-<div class="row ">
+<div class=" d-flex gap-2">
 
-<div class="pt-2 pb-2 mycontent col-12 col-md-6 d-flex flex-column align-items-center gap-2 col-lg-4 pb-3">
+<div class="pt-2 pb-2 ps-2 pe-2 text-center mycontent  d-flex flex-column align-items-center gap-2  pb-3">
     <div class="Content2icon mb-2">
-    <i class="fa-regular fa-user"></i>
+    <i class="fa-regular fa-user text-light "></i>
   </div>
-  <div class="content2Head mb-2">
+  <div class="content2Head mb-2 text-light">
     Trusted
   </div>
-  <div class="Content2para">
+  <div class="Content2para text-light text-light">
     A wide fleet for every need.
   </div>
 </div>
-<div class="pt-2 mycontent gap-2 col-md-6 col-lg-4 d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2">
+<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2 col-md-6 col-lg-4 d-flex flex-column align-items-center pb-3">
+      <div class="Content2icon mb-2 text-light">
     <i class="fa-regular fa-user"></i>
   </div>
-  <div class="content2Head mb-2">
+  <div class="content2Head mb-2 text-light">
     Trusted
   </div>
-  <div class="Content2para">
+  <div class="Content2para text-light">
     A wide fleet for every need.
   </div>
 </div>
-<div class="pt-2 mycontent gap-2 col-12 col-lg-4 d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2">
+<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2  d-flex flex-column align-items-center pb-3">
+      <div class="Content2icon mb-2 text-light">
     <i class="fa-regular fa-user"></i>
   </div>
-  <div class="content2Head mb-2">
+  <div class="content2Head mb-2 text-light">
     Trusted
   </div>
-  <div class="Content2para">
+  <div class="Content2para text-light">
   A wide fleet for every need.
   </div>
 </div>
@@ -278,11 +278,18 @@ ABOUT US
 
 
 <footer class="footer">
+  <div class="footIcon d-flex justify-content-end pe-3 gap-3 pb-3
+  ">
+    <i class="fa-brands fa-facebook"></i>
+<i class="fa-brands fa-linkedin"></i>
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-x-twitter"></i>
+  </div>
 <div class="container">
 
 <div class="row">
 
-<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
+<div class="footSec1 mb-3 pb-1 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
   <div class="footHead"> 
   <h5>About Us</h5>  
   </div>
@@ -296,7 +303,7 @@ ABOUT US
 <i class="fa-brands fa-linkedin"></i>
   </div>
 </div>
-<div class="footSec2 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+<div class="footSec2 mb-3 pb-1 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
   <div class="footHead">
     <h5>Pages</h5>
   </div>
@@ -308,7 +315,7 @@ ABOUT US
     </ul>
   </div>
 </div>
-<div class="footsec3 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+<div class="footsec3 mb-3 pb-1 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
   <div class="footHead">
     <h5>Resources</h5>
   </div>
