--- a/Project/index.html
+++ b/Project/index.html
@@ -392,7 +392,7 @@
 
   <h2 class="apartHead1 mb-5" >WHAT SETS US <SPAN class="apartHead2 mb-5"> APART </SPAN></h2>
 
-<div class="row">
+<div class="row text-center">
 
 <div class="col-12 col-md-6 col-lg-4 mb-4">
   <div class="icon mb-2">
@@ -611,11 +611,18 @@ US
   <!-- footer  -->
 
 <footer class="footer">
+  <div class="footIcon d-flex justify-content-end pe-3 gap-3 pb-3
+  ">
+    <i class="fa-brands fa-facebook"></i>
+<i class="fa-brands fa-linkedin"></i>
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-x-twitter"></i>
+  </div>
 <div class="container">
 
 <div class="row">
 
-<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
+<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-1 justify-content-start gap-2">
   <div class="footHead"> 
   <h5>About Us</h5>  
   </div>
@@ -629,7 +636,7 @@ US
 <i class="fa-brands fa-linkedin"></i>
   </div>
 </div>
-<div class="footSec2 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+<div class="footSec2 col-12 col-md-6 col-lg-2 d-flex mb-3 pb-1 flex-column justify-content-start gap-2">
   <div class="footHead">
     <h5>Pages</h5>
   </div>
@@ -641,7 +648,7 @@ US
     </ul>
   </div>
 </div>
-<div class="footsec3 col-12 col-md-6 col-lg-2 d-flex flex-column justify-content-start gap-2">
+<div class="footsec3 col-12 col-md-6 col-lg-2 d-flex mb-3 pb-1 flex-column justify-content-start gap-2">
   <div class="footHead">
     <h5>Resources</h5>
   </div>
@@ -653,7 +660,7 @@ US
     </ul>
   </div>
 </div>
-<div class="footSec4 col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-start gap-2">
+<div class="footSec4 col-12 col-md-6 col-lg-4 d-flex mb-3 pb-1 flex-column justify-content-start gap-2">
   <div class="footHead">
     <h5>Contact</h5>
   </div>
