--- a/Project/about.html
+++ b/Project/about.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="./about.css">
 </head>
 <body>
-  
-	<header class="header">
+ <header class="header">
 
 		<!-- Top Bar -->
 
@@ -67,7 +66,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
             <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
+            <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
             <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
           </ul>
         </li>
@@ -90,7 +89,6 @@
 
 
 			</header>
-
             <!-- About hero -->
 <div class="hero">
 <div class="heroimg d-flex flex-column justify-content-center ">
@@ -140,48 +138,6 @@ ABOUT US
 
 </div>
 
-<div class="cardcontent2">
-<div class=" d-flex gap-2">
-
-<div class="pt-2 pb-2 ps-2 pe-2 text-center mycontent  d-flex flex-column align-items-center gap-2  pb-3">
-    <div class="Content2icon mb-2">
-    <i class="fa-regular fa-user text-light "></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light text-light">
-    A wide fleet for every need.
-  </div>
-</div>
-<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2 col-md-6 col-lg-4 d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2 text-light">
-    <i class="fa-regular fa-user"></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light">
-    A wide fleet for every need.
-  </div>
-</div>
-<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2  d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2 text-light">
-    <i class="fa-regular fa-user"></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light">
-  A wide fleet for every need.
-  </div>
-</div>
-</div>
-
-
-</div>
-
-
 </div>
 
 <div class="col-12 col-lg-6">
@@ -203,104 +159,126 @@ ABOUT US
 
   <h2 class="apartHead1 mb-5" >WHAT SETS US <SPAN class="apartHead2 mb-5"> APART </SPAN></h2>
 
-<div class="row">
+<div class="apart-cards  pb-4 d-grid gap-4">
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+<div class=" card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 px-4 bg-white py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4  mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 d-flex justify-content-center align-items-center mb-2">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-</div>
+  </div>
 
 
 </div>
 
 </div>
 
+<!-- contact us -->
+
+
+<div class="contact-us bg-black d-flex flex-column align-items-center gap-3 py-5 ">
+  <h2 style="text-transform: capitalize;" >Lets you Explore the Best. Contact Us Now</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, fugit?</p>
+ <a href="./contact.html">
+   <button class="Mybtn" >Get in Touch</button>
+ </a>
+</div>
 
 
 
 
-<footer class="footer">
-  <div class="footIcon d-flex justify-content-end pe-3 gap-3 pb-3
+<footer class="footer px-3">
+  <div class="footIcon d-flex justify-content-end pe-3 gap-4 pb-3
   ">
     <i class="fa-brands fa-facebook"></i>
 <i class="fa-brands fa-linkedin"></i>
 <i class="fa-brands fa-instagram"></i>
 <i class="fa-brands fa-x-twitter"></i>
   </div>
-<div class="container">
+<div class="container footContainer">
 
 <div class="row">
 
-<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-1 justify-content-start gap-2">
+<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-3 justify-content-start gap-2 ">
   <div class="footHead"> 
   <a href="./about.html" class="text-decoration-none text-light">
        <h5>ABOUT US</h5>
@@ -372,14 +350,10 @@ ABOUT US
 </footer>
 
 <div class="footer2 d-flex justify-content-center">
-<p class="m-0 pt-5 pb-5">Copyright 2025</p>
+<p class="m-0 pt-3 pb-3">@2025 All Rights Reserved</p>
 
 </div>
 
-<div class="footer2 d-flex justify-content-center">
-<p class="m-0 pt-5 pb-5">Copyright 2025</p>
-
-</div>
 
 
 
