--- a/Project/drive.html
+++ b/Project/drive.html
@@ -123,19 +123,19 @@ ABOUT US
 </div>
 
 
-<footer class="footer">
-  <div class="footIcon d-flex justify-content-end pe-3 gap-3 pb-3
+<footer class="footer px-3">
+  <div class="footIcon d-flex justify-content-end pe-3 gap-4 pb-3
   ">
     <i class="fa-brands fa-facebook"></i>
 <i class="fa-brands fa-linkedin"></i>
 <i class="fa-brands fa-instagram"></i>
 <i class="fa-brands fa-x-twitter"></i>
   </div>
-<div class="container">
+<div class="container footContainer">
 
 <div class="row">
 
-<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-1 justify-content-start gap-2">
+<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-3 justify-content-start gap-2 ">
   <div class="footHead"> 
   <a href="./about.html" class="text-decoration-none text-light">
        <h5>ABOUT US</h5>
@@ -207,9 +207,10 @@ ABOUT US
 </footer>
 
 <div class="footer2 d-flex justify-content-center">
-<p class="m-0 pt-5 pb-5">Copyright 2025</p>
+<p class="m-0 pt-3 pb-3">@2025 All Rights Reserved</p>
 
 </div>
+
 
  <script src="./bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js" ></script>
  <script src="./app.js" ></script>
