--- a/Project/contact.html
+++ b/Project/contact.html
@@ -13,7 +13,7 @@
     
     
 	
-	<header class="header">
+<header class="header">
 
 		<!-- Top Bar -->
 
@@ -69,7 +69,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
             <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
+            <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
             <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
           </ul>
         </li>
@@ -150,19 +150,19 @@ CONTACT US
 <!-- footer -->
 
 
-<footer class="footer">
-  <div class="footIcon d-flex justify-content-end pe-3 gap-3 pb-3
+<footer class="footer px-3">
+  <div class="footIcon d-flex justify-content-end pe-3 gap-4 pb-3
   ">
     <i class="fa-brands fa-facebook"></i>
 <i class="fa-brands fa-linkedin"></i>
 <i class="fa-brands fa-instagram"></i>
 <i class="fa-brands fa-x-twitter"></i>
   </div>
-<div class="container">
+<div class="container footContainer">
 
 <div class="row">
 
-<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-1 justify-content-start gap-2">
+<div class="footSec1 col-12 col-md-6 col-lg-4 d-flex flex-column mb-3 pb-3 justify-content-start gap-2 ">
   <div class="footHead"> 
   <a href="./about.html" class="text-decoration-none text-light">
        <h5>ABOUT US</h5>
@@ -234,9 +234,10 @@ CONTACT US
 </footer>
 
 <div class="footer2 d-flex justify-content-center">
-<p class="m-0 pt-5 pb-5">Copyright 2025</p>
+<p class="m-0 pt-3 pb-3">@2025 All Rights Reserved</p>
 
 </div>
+
 
 
  <script src="./bootstrap-5.3.6-dist/js/bootstrap.bundle.min.js" ></script>
