--- a/Project/cruise_port_service.html
+++ b/Project/cruise_port_service.html
@@ -68,7 +68,7 @@
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
             <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
             <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
-            <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
+            <li><a class="dropdown-item text-dark" href="./station_service.html">Station Transfer </a></li>
           </ul>
         </li>
 
@@ -93,101 +93,23 @@
 
             <!-- About hero -->
 <div class="hero">
-<div class="heroimg d-flex flex-column justify-content-center ">
-<div class="container">
-    
-<div class="herocontent d-flex flex-column align-items-center ">
-    <div class="heading1">
-        <h4>WANT TO KNOW</h4>
-    </div>
+<div class="heroimg d-flex flex-column justify-content-center ps-5 gap-5">
+
+<div class="herocontent d-flex flex-column gap-3">
 <div class="heading">
     <h1>
-ABOUT US
-        </h1>
+CRUISEPORT</h1>
+<H2>TRANSFER</H2>
 </div>
-
-
+<div class="buttonDiv">
+    <button class="herobtn d-flex justify-content-center align-items-center gap-2">
+        Explore More
+        <i class="fa-solid fa-greater-than icon"></i>
+    </button>
 </div>
-</div>
-
-
-
-
-</div>
-
 
 </div>
 
-
-<!-- section 1 -->
-
-<div class="container mycontainer ">
-
-<div class="cardsection row">
-
-<div class="col-12 col-lg-6 pb-4 mb-md-4 mb-lg-0">
-
-<div class="cardcontent pb-3">
-   
-<div class="drivehead mb-2 ">
- <h2 class="serviceHead1">About <span class="serviceHead2"> US</span> </h2>
-  </div>
-  <div class="Sec1Para">
- We are a premier transportation and transfer solutions provider, dedicated to offering reliable, comfortable, and timely travel experiences. With a strong presence in major cities and airport routes, we specialize in private transfers, corporate transport, VIP chauffeur services, and customized travel packages. Our commitment to safety, customer satisfaction, and punctuality sets us apart in the transport industry.
-  </div>
-
-
-
-</div>
-
-<div class="cardcontent2">
-<div class=" d-flex gap-2">
-
-<div class="pt-2 pb-2 ps-2 pe-2 text-center mycontent  d-flex flex-column align-items-center gap-2  pb-3">
-    <div class="Content2icon mb-2">
-    <i class="fa-regular fa-user text-light "></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light text-light">
-    A wide fleet for every need.
-  </div>
-</div>
-<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2 col-md-6 col-lg-4 d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2 text-light">
-    <i class="fa-regular fa-user"></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light">
-    A wide fleet for every need.
-  </div>
-</div>
-<div class="pt-2 ps-2 pe-2 text-center mycontent gap-2  d-flex flex-column align-items-center pb-3">
-      <div class="Content2icon mb-2 text-light">
-    <i class="fa-regular fa-user"></i>
-  </div>
-  <div class="content2Head mb-2 text-light">
-    Trusted
-  </div>
-  <div class="Content2para text-light">
-  A wide fleet for every need.
-  </div>
-</div>
-</div>
-
-
-</div>
-
-
-</div>
-
-<div class="col-12 col-lg-6">
-<div class="imgsection">
-    <img class="w-100" src="./assets/003-2025-audi-s5.jpg" alt="">
-</div>
 
 
 
@@ -196,91 +118,198 @@ ABOUT US
 
 </div>
 
+<!-- cruise port section -->
+
+
+<div class="cruise-sec py-5">
+<div class="container">
+
+<div class="cruise-headings text-center pt-2 pb-5">
+  <h3 class="cruiseport-head1 py-2">What’s Included</h3>
+<h2 class="cruiseport-head2 py-2" >
+  Cruise Port <span class="head-edit">Transfer </span>
+</h2>
+<p>At Great Transfers, we offer 24-hour,reliable airport transfer services with a professional driver, to and from all major London airports, as well as any destination across the United Kingdom. Our mission is to provide the safest, most dependable transfer service at competitive rates, ensuring you travel in comfort and style.</p>
 </div>
 
-<div class="setUp">
-<div class="container mycontainer">
 
-  <h2 class="apartHead1 mb-5" >WHAT SETS US <SPAN class="apartHead2 mb-5"> APART </SPAN></h2>
 
-<div class="row">
+  <div class="cruise-cards  pb-4 d-flex gap-4">
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
+<div class=" card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
   <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
   <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
+
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 px-4 bg-white py-4">
+
   <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+  </div>
+
+
+
+
+
+</div>
+
+
+</div>
+
+
+
+
+
+
+
+<div class="coverage-sec py-5">
+
+<div class="container">
+<div class="cruise-headings text-center pt-2 pb-5">
+  <h3 class="cruiseport-head1 py-2">Our Coverage</h3>
+<h2 class="cruiseport-head2 py-2" >
+  Cruise Port <span class="head-edit"> Transfers Across the UK </span>
+</h2>
+<p>At Great Transfers, we offer 24-hour,reliable airport transfer services with a professional driver, to and from all major London airports, as well as any destination across the United Kingdom. Our mission is to provide the safest, most dependable transfer service at competitive rates, ensuring you travel in comfort and style.</p>
+</div>
+
+
+
+<div class="coverage-content">
+
+
+  
+
+<div class="apart-cards  pb-4 d-grid gap-4">
+
+<div class=" card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4 mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 mb-2 d-flex justify-content-center align-items-center">
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
-<div class="col-12 col-md-6 col-lg-4  mb-5 d-flex flex-column align-items-center">
-  <div class="myicon2 d-flex justify-content-center align-items-center mb-2">
+
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 px-4 bg-white py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
     <i class="fa-regular fa-user"></i>
   </div>
   <div class="aparthead mb-2">
     Trusted
   </div>
-  <div class="para">
+  <div class="para text-center">
     With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
   </div>
 </div>
 
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
+    <i class="fa-regular fa-user"></i>
+  </div>
+  <div class="aparthead mb-2">
+    Trusted
+  </div>
+  <div class="para text-center">
+    With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
+  </div>
 </div>
 
 
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
+    <i class="fa-regular fa-user"></i>
+  </div>
+  <div class="aparthead mb-2">
+    Trusted
+  </div>
+  <div class="para text-center">
+    With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
+  </div>
 </div>
+
+
+<div class="card-1  d-flex flex-column align-items-center mb-4 bg-white px-4 py-4">
+
+  <div class="icon mb-2 d-flex justify-content-center align-items-center">
+    <i class="fa-regular fa-user"></i>
+  </div>
+  <div class="aparthead mb-2">
+    Trusted
+  </div>
+  <div class="para text-center">
+    With 50 years of exceptional service, Addison Lee is the trusted choice for passengers and businesses seeking reliable transportation
+  </div>
+</div>
+
+  </div>
+
+
+
+
+</div>
+
+
+
+</div>
+
 
 </div>
 
