--- a/Project/index.html
+++ b/Project/index.html
@@ -73,7 +73,7 @@
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
             <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
             <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
-            <li><a class="dropdown-item text-dark" href="#">Station Transfer </a></li>
+            <li><a class="dropdown-item text-dark" href="./station_service.html">Station Transfer </a></li>
           </ul>
         </li>
 
@@ -676,7 +676,7 @@ US
 <!-- contact form -->
 
 
- <div class="contact ">
+ <div class="contact mt-0 ">
 		<div class="contact_background" style="background-image:url(./assets/contact2.jpg)"></div>
 
 		<div class="container">
