--- a/Project/contact.html
+++ b/Project/contact.html
@@ -68,7 +68,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
+            <li><a class="dropdown-item text-dark" href="./sight.html">Sightseeing Tours</a></li>
             <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
             <li><a class="dropdown-item text-dark" href="./station_service.html">Station Transfer </a></li>
           </ul>
@@ -146,6 +146,17 @@ CONTACT US
 			</div>
 		</div>
 	</div> 
+
+
+
+  <div class="contact-us bg-black d-flex flex-column align-items-center gap-3 py-5 ">
+  <h2 style="text-transform: capitalize;" class="text-light" >Lets you Explore the Best. Contact Us Now</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, fugit?</p>
+ <a href="./contact.html">
+   <button class="Mybtn" >Get in Touch</button>
+ </a>
+</div>
+
 
 <!-- footer -->
 
