--- a/Project/drive.html
+++ b/Project/drive.html
@@ -69,7 +69,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
+            <li><a class="dropdown-item text-dark" href="./sight.html">Sightseeing Tours</a></li>
             <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
             <li><a class="dropdown-item text-dark" href="./station_service.html">Station Transfer </a></li>
           </ul>
