--- a/Project/index.html
+++ b/Project/index.html
@@ -71,7 +71,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item text-dark" href="./cruise_port_service.html">Cruise Port Transfers</a></li>
-            <li><a class="dropdown-item text-dark" href="#">Sightseeing Tours</a></li>
+            <li><a class="dropdown-item text-dark" href="./sight.html">Sightseeing Tours</a></li>
             <li><a class="dropdown-item text-dark" href="./Airport_service.html">Airport Transfer </a></li>
             <li><a class="dropdown-item text-dark" href="./station_service.html">Station Transfer </a></li>
           </ul>
@@ -307,7 +307,7 @@
 
         <div class="col-md-4 mb-3 card-group">
           <div class="card">
-            <img src="./assets/2025_mercedes-benz_s-class_sedan_amg-s-63-e-performance_fq_oem_1_1280.avif" class="card-img-top">
+            <img src="./assets/station.jpg" class="card-img-top">
             <div class="card-body ">
               <h5 class="card-title">Station </h5>
               <p class="card-text text-start">We provide reliable, timely, and professional transfers from and to all major cruise ports in the UK. Whether you're starting your journey or returning from sea, our team ensures a seamless door-to-port or port-to-door experience.</p>
@@ -328,7 +328,7 @@
 
         <div class="col-md-4 mb-3 card-group">
           <div class="card">
-            <img src="./assets/96fc9342246951ad0f8814476c5fe6fc.png" class="card-img-top">
+            <img src="./assets/sightseeing.jpg" class="card-img-top mb-2">
             <div class="card-body">
               <h5 class="card-title">Sightseeing </h5>
               <p class="card-text">Our private sightseeing tours are crafted for comfort, convenience, and discovery. Whether you're a tourist or a local wanting to rediscover your city, our experienced drivers double as friendly guides.
@@ -352,7 +352,7 @@
 
         <div class="col-md-4 mb-3 card-group">
           <div class="card">
-            <img src="./assets/d662614-1024x640.jpg" class="card-img-top">
+            <img src="./assets/cruise-ship.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Cruise Port </h5>
               <p class="card-text">We provide reliable, timely, and professional transfers from and to all major cruise ports in the UK. Whether you're starting your journey or returning from sea, our team ensures a seamless door-to-port or port-to-door experience.</p>
@@ -380,7 +380,7 @@
 
         <div class="col-md-4 card-group">
           <div class="card">
-            <img src="./assets/d662614-1024x640.jpg" class="card-img-top">
+            <img src="./assets/rocker-sta-RSYBi_1fhfM-unsplash.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Airport </h5>
               <p class="card-text">We provide reliable, timely, and professional transfers from and to all major cruise ports in the UK. Whether you're starting your journey or returning from sea, our team ensures a seamless door-to-port or port-to-door experience.</p>
@@ -402,7 +402,7 @@
 
         <div class="col-md-4 card-group">
            <div class="card">
-            <img src="./assets/d662614-1024x640.jpg" class="card-img-top">
+            <img src="./assets/cruise-ship.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Cruise Port </h5>
               <p class="card-text">We provide reliable, timely, and professional transfers from and to all major cruise ports in the UK. Whether you're starting your journey or returning from sea, our team ensures a seamless door-to-port or port-to-door experience.</p>
@@ -424,7 +424,7 @@
 
         <div class="col-md-4 card-group">
          <div class="card">
-            <img src="./assets/d662614-1024x640.jpg" class="card-img-top">
+            <img src="./assets/cruise-ship.jpg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Cruise Port </h5>
               <p class="card-text">We provide reliable, timely, and professional transfers from and to all major cruise ports in the UK. Whether you're starting your journey or returning from sea, our team ensures a seamless door-to-port or port-to-door experience.</p>
@@ -658,7 +658,7 @@ US
 
 <div class="col-12 col-md-6">
 <div class="imgsection">
-    <img class="w-100" src="./assets/003-2025-audi-s5.jpg" alt="">
+    <img class="w-100" src="./assets/about.jpg" alt="">
 </div>
 
 <div class="cardcontent">
